@@ -14,6 +14,9 @@ See the end for copying conditions.
 ** libgnutls: the gnutls_srp_set_server_credentials_function can be used
    with the 8192 parameters as well (#995).
 
+** libgnutls: Fix calculation of Streebog digests (incorrect carry operation in
+   512 bit addition)
+
 ** API and ABI modifications:
 gnutls_prf_early: Added
 
